--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <div id="message">
-      <h1>Paso por ti a las 8 bb ponte bonita te llevare por taquitos  br>♥</h1>
+      <h1>Paso por ti a las 8 bb ponte bonita te llevare por taquitos  bb/h1>
       <img src="./assets/dino_love_2.webp" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.webp" width="250" alt="Dino Love">
